Added splash screen. Working on sorting data. Changes to UI eg changing title. Removed depracated code

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="135"
         android:centerColor="#ffa21c"
-        android:endColor="#b97b23"
-        android:startColor="#ffbc5c"
+        android:endColor="#da731b"
+        android:startColor="#ffa861"
         android:type="linear" />
 </shape>
