Search function works! Many reorganizing around of variables n stuff

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#ffa21c"
-        android:endColor="#da731b"
-        android:startColor="#ffa861"
+        android:centerColor="#fc9500"
+        android:endColor="#da6602"
+        android:startColor="#ff9540"
         android:type="linear" />
 </shape>
