--- a/app/src/main/res/layout/details_page.xml
+++ b/app/src/main/res/layout/details_page.xml
@@ -8,7 +8,7 @@
     android:background="@color/cardview_light_background">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/title"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -25,7 +25,7 @@
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:text="Rank  " />
 
     <TextView
@@ -42,7 +42,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <ViewStub
         android:id="@+id/viewStub"
