--- a/app/src/main/res/layout/parts_list_row.xml
+++ b/app/src/main/res/layout/parts_list_row.xml
@@ -73,11 +73,14 @@
                 android:id="@+id/relativePerf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="52dp"
+                android:layout_marginStart="8dp"
                 android:textSize="12sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/samples"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/samples"
                 tools:text="Relative Performance: 200%" />
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
