--- a/app/src/main/res/layout/parts_list_row.xml
+++ b/app/src/main/res/layout/parts_list_row.xml
@@ -38,7 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_constraintLeft_creator="1"
                 tools:layout_constraintTop_creator="1"
-                tools:text="1st" />
+                tools:text="999th" />
 
             <TextView
                 android:id="@+id/hardware"
@@ -73,11 +73,11 @@
                 android:id="@+id/relativePerf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="52dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginStart="28dp"
                 android:textSize="12sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/samples"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/samples"
                 tools:text="Relative Performance: 200%" />
 
