--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#333333</color>
     <color name="colorAccent">#ffa21c</color>
 
-    <color name="green">#AEDDA2</color>
+    <color name="green">#aedda2</color>
     <color name="orange">#FFD966</color>
     <color name="red">#F76F78</color>
 </resources>
