Subresults for CPU data is now in comparisons! Stuff is looking a lil nicer too. Hoping to add a checkbox in the recyclerview if I can stop the card view click event from firing if i hit the checkbox

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="green">#aedda2</color>
     <color name="orange">#FFD966</color>
     <color name="red">#F76F78</color>
+    <color name="text54">#757575</color>
+    <color name="text83">#212121</color>
 </resources>
