--- a/app/src/main/res/layout/parts_list_row.xml
+++ b/app/src/main/res/layout/parts_list_row.xml
@@ -17,6 +17,7 @@
         android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:cardBackgroundColor="@color/cardview_light_background"
         app:cardElevation="0dp">
 
         <android.support.constraint.ConstraintLayout
@@ -43,13 +44,11 @@
                 android:id="@+id/hardware"
                 android:layout_width="0dp"
                 android:layout_height="46dp"
-                android:layout_marginEnd="4dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/checkBox2"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rank"
@@ -82,18 +81,6 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/samples"
                 tools:text="Relative Performance: 200%" />
-
-            <CheckBox
-                android:id="@+id/checkBox2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:buttonTint="@color/colorAccent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/relativePerf"
-                app:layout_constraintVertical_bias="1.0" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
