--- a/app/src/main/res/layout/parts_list_row.xml
+++ b/app/src/main/res/layout/parts_list_row.xml
@@ -27,9 +27,9 @@
 
             <TextView
                 android:id="@+id/rank"
-                android:layout_width="62dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="8dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:textAllCaps="false"
                 android:textColor="@color/colorAccent"
                 android:textSize="24sp"
@@ -42,14 +42,14 @@
 
             <TextView
                 android:id="@+id/hardware"
-                android:layout_width="0dp"
+                android:layout_width="350dp"
                 android:layout_height="46dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/compareBox"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rank"
                 app:layout_constraintVertical_bias="0.0"
@@ -58,10 +58,10 @@
 
             <TextView
                 android:id="@+id/samples"
-                android:layout_width="100dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="56dp"
                 android:layout_marginTop="4dp"
                 android:textColor="@color/colorPrimary"
                 android:textSize="12sp"
@@ -73,15 +73,23 @@
 
             <TextView
                 android:id="@+id/relativePerf"
-                android:layout_width="160dp"
+                android:layout_width="95dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginRight="8dp"
                 android:textSize="12sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/samples"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/samples"
-                tools:text="Relative Performance: 200%" />
+                tools:text="Rel. Perf: 200%" />
 
+            <CheckBox
+                android:id="@+id/compareBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="8dp"
+                android:buttonTint="@color/colorAccent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
